--- a/FoodiesCustom/FoodiesCustom/Dockerfile
+++ b/FoodiesCustom/FoodiesCustom/Dockerfile
@@ -1,6 +1,10 @@
-FROM eclipse-temurin:17-jdk-alpine
+FROM maven:3.9.4-eclipse-temurin-17 AS build
 WORKDIR /app
 COPY . /app
 RUN ./mvnw clean install -DskipTests
+
+FROM eclipse-temurin:17
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8869
-CMD ["java", "-jar", "target/*.jar", "--server.port=8869"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
