--- a/FoodiesCustom/FoodiesCustom/src/main/resources/application.properties
+++ b/FoodiesCustom/FoodiesCustom/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=FoodiesCustom
 server.port = 8869
 
 # mongodb connection
-spring.data.mongodb.uri = mongodb://localhost:27017/FoodiesCustom
+# spring.data.mongodb.uri = mongodb://localhost:27017/FoodiesCustom
+spring.data.mongodb.uri = ${MONGO_URI}
 
 #AWS S3 configuration
 aws.access.key = ${AWS_ACCESS_KEY}
